vps card gap fixed

--- a/css/custom.css
+++ b/css/custom.css
@@ -316,14 +316,15 @@ img {
     padding: 10px 0;
     font-size: 20px;
     font-weight: 600;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .subItem {
     display: flex;
     border-bottom: 1px solid #959595;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     padding: 0 20px;
+    height: 30px;
 }
 
 .subItem h5 {
