--- a/css/footer.css
+++ b/css/footer.css
@@ -118,9 +118,16 @@ footer {
     padding-top: 10px;
 }
 
+.footer_item p {
+    color: rgb(157, 167, 176);
+}
 
 
-
+.company_name h5 {
+    border-bottom: 1px solid rgb(157, 167, 176);
+    display: inline-block;
+    padding-bottom: 5px;
+}
 
 
 
@@ -163,10 +170,12 @@ footer {
         display: block;
         margin: 0 auto;
     }
-    .vps_head{
+
+    .vps_head {
         display: none;
     }
-    .vps_mhead{
+
+    .vps_mhead {
         display: grid;
         grid-template-columns: 1fr;
         gap: 20px;
@@ -209,12 +218,14 @@ footer {
         display: block;
         margin: 0 auto;
     }
-    .vps_head{
+
+    .vps_head {
         display: none;
     }
-    .vps_mhead{
+
+    .vps_mhead {
         display: grid;
-        grid-template-columns: repeat(2,1fr);
+        grid-template-columns: repeat(2, 1fr);
         gap: 20px;
     }
 }
